Fix css z-indexes of menu and notification center

--- a/Criollo Web/Public/menu.styl
+++ b/Criollo Web/Public/menu.styl
@@ -16,6 +16,7 @@ body
     width 100%
     position fixed
     transition background-color 0.25s ease-in-out
+    z-index 10000
 
     .content
       padding 1em
