--- a/Criollo Web/Public/notifications.styl
+++ b/Criollo Web/Public/notifications.styl
@@ -15,10 +15,11 @@ notification-close-spacing = 2px
 body
 
   .notification-center
-    position absolute
+    position fixed
     top 0
     right notification-spacing
     width notification-width
+    z-index 50000
 
     .notification
       position relative
